--- a/PA1_template.html
+++ b/PA1_template.html
@@ -203,7 +203,7 @@ hr {
 <body>
 <h2>Loading and preprocessing the data</h2>
 
-<h4>*1. Load the data *</h4>
+<h4><em>1. Load the data</em></h4>
 
 <pre><code class="r">if(!file.exists(&#39;activity.csv&#39;)){
     unzip(&#39;activity.zip&#39;)
